src/objects/Leg__c.object
<CustomObject>
    <fields>
        <fullName>CalendarTitleLeg__c</fullName>
        <description>This is the formula to be used in CalendarAnywhere.
More: https://help.salesforce.com/HTViewHelpDoc?id=formula_examples_dates.htm&amp;language=en_US#getting-hms-from-datetime

TEXT(Departure_Time_Local__c) &amp; &quot; - &quot; &amp;
Itinerary__r.Trip_Manager_Number__r.Account.Name &amp; &quot; - &quot; &amp;
Departing_Airport__r.Name &amp; &quot; - &quot; &amp;
Arriving_Airport__r.Name &amp; &quot; - &quot; &amp;
Itinerary__r.Operator__r.Name &amp; &quot; - &quot; &amp;
  Aircraft_Tail_Number__r.Name   &amp; &quot; - &quot; &amp;
Important_Flight_Notes__c</description>
        <formula>Departure_Time_Local__c &amp; &quot;-&quot; &amp;
End_of_Departure_Slide__c &amp; &quot;(LT)&quot; &amp; &quot; - &quot; &amp;
Lead_Passenger__r.FirstName &amp; &quot; &quot; &amp;
Lead_Passenger__r.LastName &amp; &quot; - &quot; &amp;
Account_Name_Formula__c &amp; &quot; - &quot; &amp;
Departing_Airport__r.Name &amp; &quot; - &quot; &amp;
Arriving_Airport__r.Name &amp; &quot; - &quot; &amp;
Solution_Category__c  &amp; &quot; - &quot; &amp;
Broker_Name__c &amp; &quot; - &quot; &amp;
Itinerary_Solution_Number__r.Operator__r.Name &amp; &quot; - &quot; &amp;
If_Subcontracted_Operator__c &amp; &quot; - &quot; &amp;
Aircraft_Tail_Number__r.Name   &amp; &quot; - &quot; &amp;
Aircraft_Type__c &amp; &quot; - &quot; &amp;
QC_Calendar_Note__c &amp; &quot; - &quot; &amp;
Important_Flight_Notes__c</formula>
        <label>Calendar Title - Leg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <formula>Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Description__c</fullName>
        <label>Cancellation Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Penalty__c</fullName>
        <label>Cancellation Penalty</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Policy__c</fullName>
        <formula>Itinerary_Solution_Number__r.Detailed_Cancellation_Policy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Policy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft Mechanical</fullName>
                </value>
                <value>
                    <fullName>Booked Direct w/ Operator</fullName>
                </value>
                <value>
                    <fullName>Commercial Flight Delay/Cancelled</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Backup Booking</fullName>
                </value>
                <value>
                    <fullName>Flew with Friend</fullName>
                </value>
                <value>
                    <fullName>Flying Commercial</fullName>
                </value>
                <value>
                    <fullName>Flying Own/Company Aircraft</fullName>
                </value>
                <value>
                    <fullName>Fuel Stop Cancelled</fullName>
                </value>
                <value>
                    <fullName>High Cost</fullName>
                </value>
                <value>
                    <fullName>Length of Delay</fullName>
                </value>
                <value>
                    <fullName>Meeting Cancelled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passenger Emergency</fullName>
                </value>
                <value>
                    <fullName>Passenger Illness</fullName>
                </value>
                <value>
                    <fullName>Plans Changed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catering_Confirmed__c</fullName>
        <label>Catering Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catering_Cost_Estimate__c</fullName>
        <label>Catering Cost Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catering_Details__c</fullName>
        <label>Catering Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Catering_Requested__c</fullName>
        <label>Catering Requested?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Ordered</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>No - Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catering__c</fullName>
        <label>Catering</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Challenge_Reason__c</fullName>
        <label>Challenge Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charter_Flight_Cost__c</fullName>
        <inlineHelpText>Includes credit card fee (if applicable).</inlineHelpText>
        <label>Charter Flight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Program_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>Client_Program__c.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions (Client)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_s_Operator_Acct_Name__c</fullName>
        <inlineHelpText>The client&apos;s operator account name if there is more than one.</inlineHelpText>
        <label>Client&apos;s Operator Acct Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comfort_Condition_of_Aircraft_Comment__c</fullName>
        <label>Comfort &amp; Condition of Aircraft Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comfort_Condition_of_Aircraft_Score__c</fullName>
        <label>Comfort &amp; Condition of Aircraft Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Leg</relationshipLabel>
        <relationshipName>CO_Leg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consent_Letter_Sent_to_Operator__c</fullName>
        <label>Consent Letter Sent to Operator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Trip_Manager_Number__r.Contact.FirstName &amp; &quot; &quot; &amp; Trip_Manager_Number__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_24_Hours__c</fullName>
        <formula>IF ( NOW() - CreatedDate &lt; 1 ,&quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created 24 Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FlexJet- Subcontracted Credit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Service Credit</fullName>
                </value>
                <value>
                    <fullName>Flexjet - Challenger 300 Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crew_Duty_Notes__c</fullName>
        <label>Crew Duty Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_Passed_ARGUS__c</fullName>
        <label>Crew Passed ARGUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Yellow</fullName>
                </value>
                <value>
                    <fullName>No - Red</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crew_Passed_Wyvern_Registered__c</fullName>
        <label>Crew Passed Wyvern Registered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crew_Passed_Wyvern_Wingman__c</fullName>
        <label>Crew Passed Wyvern Wingman</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customs_Hours_at_Arrival_Airport__c</fullName>
        <label>Customs Hours at Arrival Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_Hours_at_Departure_Airport__c</fullName>
        <label>Customs Hours at Departure Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_Stop_if_applicable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customs Stop (if applicable)</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Legs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Booked__c</fullName>
        <label>Date Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reconciled__c</fullName>
        <label>Date Reconciled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Flight_Contact_Provided__c</fullName>
        <label>Day of Flight Contact Provided</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_of_Flight_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day of Flight Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Post__c</fullName>
        <label>Day of Travel - Post</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. No time sensitivity after landing</fullName>
                </value>
                <value>
                    <fullName>2. Time sensitive event 5 hours + after landing</fullName>
                </value>
                <value>
                    <fullName>3. Time sensitive event less than 5 hours after landing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Sc_Post__c</fullName>
        <label>Day of Travel (Sc.) Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Score__c</fullName>
        <label>Day of Travel (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_W_Post__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>Day of Travel (W) Post</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_W_Sc_Post__c</fullName>
        <formula>Day_of_Travel_Sc_Post__c * Day_of_Travel_W_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Travel (W Sc.) Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Weight__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>Day of Travel (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Weighted_Score__c</fullName>
        <formula>Day_of_Travel_Score__c * Day_of_Travel_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Travel (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel__c</fullName>
        <label>Day of Travel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. No time sensitivity after landing</fullName>
                </value>
                <value>
                    <fullName>2. Time sensitive event 5 hours + after landing</fullName>
                </value>
                <value>
                    <fullName>3. Time sensitive event less than 5 hours after landing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deicing__c</fullName>
        <label>Deicing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delay_Description__c</fullName>
        <label>Delay Description</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <label>Delay Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ask Client Why</fullName>
                </value>
                <value>
                    <fullName>Aircraft Mechanical</fullName>
                </value>
                <value>
                    <fullName>Aircraft Positioning</fullName>
                </value>
                <value>
                    <fullName>Airport Construction</fullName>
                </value>
                <value>
                    <fullName>Airport Operations</fullName>
                </value>
                <value>
                    <fullName>Air Traffic Control (ATC)</fullName>
                </value>
                <value>
                    <fullName>Catering Late</fullName>
                </value>
                <value>
                    <fullName>Crew Duty</fullName>
                </value>
                <value>
                    <fullName>Crew Fatigue</fullName>
                </value>
                <value>
                    <fullName>Crewing Issue</fullName>
                </value>
                <value>
                    <fullName>Customs</fullName>
                </value>
                <value>
                    <fullName>FBO Service</fullName>
                </value>
                <value>
                    <fullName>Flight Planning</fullName>
                </value>
                <value>
                    <fullName>Ground Stop</fullName>
                </value>
                <value>
                    <fullName>Incorrect Booking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passenger Documentation</fullName>
                </value>
                <value>
                    <fullName>Passengers Late</fullName>
                </value>
                <value>
                    <fullName>POTUS</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dep_Time_Numeric__c</fullName>
        <formula>VALUE( substitute(Departure_Time_Local__c,&quot;:&quot;,&quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dep Time Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Sc_Post__c</fullName>
        <label>Depart. Date (Sc.) Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Service_Impact_Post__c</fullName>
        <label>Depart. Date (Service Impact) Post</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Lowest Volume (~300 days per year)</fullName>
                </value>
                <value>
                    <fullName>2. Medium Volume Days</fullName>
                </value>
                <value>
                    <fullName>3. Highest Volume (Peak Days)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Date_Service_Impact_Score__c</fullName>
        <label>Depart. Date [Service Impact] (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Service_Impact_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Depart. Date [Service Impact] (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Service_Impact__c</fullName>
        <label>Depart. Date (Service Impact)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Lowest Volume (~300 days per year)</fullName>
                </value>
                <value>
                    <fullName>2. Medium Volume Days</fullName>
                </value>
                <value>
                    <fullName>3. Highest Volume (Peak Days)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Date_W_Post__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Depart. Date (W) Post</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depart_Date_W_Sc_Post__c</fullName>
        <formula>Depart_Date_Sc_Post__c * Depart_Date_W_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depart. Date (W Sc.) Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Weighted_Score__c</fullName>
        <formula>Depart_Date_Service_Impact_Score__c * Depart_Date_Service_Impact_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depart. Date (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancel_Sc_Post__c</fullName>
        <label>Depart. Flex. &amp; Cancel. (Sc.) Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation_Post__c</fullName>
        <label>Depart. Flex. &amp; Cancellation - Post</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Guaranteed Solution (NetJets/Flexjet/Sentient)</fullName>
                </value>
                <value>
                    <fullName>2. EJM/National Charter/Dedicated Aircraft</fullName>
                </value>
                <value>
                    <fullName>3. Non-Guaranteed Solution (Local Charter/Broker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation_Score__c</fullName>
        <label>Depart. Flex. &amp; Cancellation (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation_W_Post__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Depart. Flex. &amp; Cancellation (W) Post</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Depart. Flex. &amp; Cancellation (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation__c</fullName>
        <label>Depart. Flex. &amp; Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Guaranteed Solution (NetJets/FlexJet/Sentient)</fullName>
                </value>
                <value>
                    <fullName>2. EJM/National Charter/Dedicated Aircraft</fullName>
                </value>
                <value>
                    <fullName>3. Non-Guaranteed Solution (Local Charter/Broker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Flex_W_Sc_Post__c</fullName>
        <formula>Depart_Flex_Cancel_Sc_Post__c  *  Depart_Flex_Cancellation_W_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depart. Flex. (W Sc.) Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Weighted_Score__c</fullName>
        <formula>Depart_Flex_Cancellation_Score__c * Depart_Flex_Cancellation_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depart. Flex. (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departing_Airport_Name__c</fullName>
        <formula>Departing_Airport__r.Airport_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departing Airport Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departing_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>4-letter airport code</inlineHelpText>
        <label>Departing Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <inlineHelpText>Local departure date</inlineHelpText>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Flexibility__c</fullName>
        <label>Departure Flexibility?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departure_Time_Local__c</fullName>
        <inlineHelpText>4-digit military time with colon (e.g., 03:00, 12:20, 21:30)</inlineHelpText>
        <label>Departure Time (Local)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Time_PT__c</fullName>
        <inlineHelpText>Military Time (e.g., 03:00, 12:20, 21:30)
Pacific Time</inlineHelpText>
        <label>Departure Time (PT)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Weather__c</fullName>
        <label>Departure Weather</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_time_adjustment__c</fullName>
        <inlineHelpText>How many minutes did operator move departure time? (e.g., +120, +30, -45, -60)</inlineHelpText>
        <label>Departure time adjustment (+/- minutes)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_time_adjustment_reason__c</fullName>
        <label>Departure time adjustment reason?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Peak Day</fullName>
                </value>
                <value>
                    <fullName>XOJET Flex</fullName>
                </value>
                <value>
                    <fullName>Slot Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dept_Date_Grouping__c</fullName>
        <description>Only to be used in charts for year or month grouping</description>
        <formula>Departure_Date__c</formula>
        <label>Dept Date Grouping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dept_Time_Calc__c</fullName>
        <formula>&apos;&quot;&apos;&amp;TEXT(VALUE( substitute(Departure_Time_Local__c,&quot;:&quot;,&quot;&quot;) ))&amp;&apos;&quot;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept Time Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_Aircraft_Change__c</fullName>
        <label>Did Aircraft Change?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_aircraft_need_to_divert_to_alternate__c</fullName>
        <label>Did aircraft divert to alternate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dietary_Restrictions__c</fullName>
        <label>Dietary Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_nm__c</fullName>
        <inlineHelpText>sm/1.15</inlineHelpText>
        <label>Distance (nm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_sm__c</fullName>
        <inlineHelpText>Multiply nautical miles (nm) by 1.15.</inlineHelpText>
        <label>Distance (sm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domestic_or_International__c</fullName>
        <label>Domestic or International?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Downgrade_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downgrade Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Arrival_Slide_Local__c</fullName>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>End of Arrival Slide (Local)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Departure_Slide__c</fullName>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>End of Departure Slide (Local)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Fee__c</fullName>
        <label>Escalation Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Arrival_Time__c</fullName>
        <label>Estimated Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Days__c</fullName>
        <label>Estimated Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Flight_Cost__c</fullName>
        <label>Estimated Flight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Flight_Time_hours__c</fullName>
        <label>Estimated Billable Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>